--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -69,7 +69,7 @@
     "tr-pppoe": "PPPoE",
     "tr-dslite": "DS-Lite",
     "tr-mape": "MAP-E",
-    "tr-ap": "AP Mode",
+    "tr-ap": "Dumb AP",
     "tr-auto-detection": "AUTO Detection",
     "tr-dhcp": "DHCP",
     "tr-internet-optimization-disabled": "Internet Disabled",
