--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -60,7 +60,7 @@
     "tr-min-snr": "Minimum SNR",
     "tr-standard": "Standard",
     "tr-usteer": "Usteer",
-    "tr-mlo": "MLO (β)",
+    "tr-mlo": "MLO (experimental)",
     "tr-disabled": "Disabled",
     "tr-wifi-optimization-disabled": "Wi-Fi Disabled",
     
