--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -60,7 +60,7 @@
     "tr-min-snr": "ミニマムSNR",
     "tr-standard": "標準",
     "tr-usteer": "Usteer",
-    "tr-mlo": "MLO (検証)",
+    "tr-mlo": "【検証】MLO (Wi-Fi 7専用)",
     "tr-disabled": "無効",
     "tr-wifi-optimization-disabled": "Wi-Fi無効",
     
