--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -262,14 +262,14 @@
     "tr-agh-customscript-password": "パスワード（8文字以上）",
     "tr-agh-customscript-webport": "WEBポート",
     "tr-agh-customscript-dnsport": "DNSポート",
-    "tr-dns-adblock-adblock-fast-info": "フィルターは言語設定に基づいて自動的に追加されます",
+    "tr-dns-adblock-adblock-fast-info": "軽量: メモリ ~1MB / ストレージ ~1MB",
     "tr-dns-adblock-title": "DNS広告ブロック",
     "tr-dns-adblock-adblock-fast": "アドブロックファースト",
     
     "tr-dns-adblock-filter-url": "フィルタURL",
     "tr-dns-adblock-nextdns": "ネクストDNS",
     "tr-dns-adblock-disabled": "無効",
-    "tr-dns-adblock-nextdns-info": "<nextdns.io> で、アカウント登録とConfiguration IDを取得して下さい",
+    "tr-dns-adblock-nextdns-info": "外部DNS利用 (デバイスリソース不要)<br><nextdns.io> でアカウント登録とConfiguration IDを取得して下さい",
     
     "tr-tui-summary-packages": "パッケージ",
     "tr-tui-summary-customfeeds": "カスタムフィード",
