--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -60,7 +60,7 @@
     "tr-min-snr": "Minimum SNR",
     "tr-standard": "Standard",
     "tr-usteer": "Usteer",
-    ""tr-mlo": "[Experimental] MLO (Wi-Fi 7 only)",
+    "tr-mlo": "[Experimental] MLO (Wi-Fi 7 only)",
     "tr-disabled": "Disabled",
     "tr-wifi-optimization-disabled": "Wi-Fi Disabled",
     
