--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -61,6 +61,7 @@
     "tr-standard": "標準",
     "tr-usteer": "Usteer",
     "tr-mlo": "【検証】MLO (Wi-Fi 7専用)",
+    "tr-wifi-mld-id": "MLD ID",
     "tr-disabled": "無効",
     "tr-wifi-optimization-disabled": "Wi-Fi無効",
     
