--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -62,7 +62,7 @@
     "tr-min-snr": "ミニマムSNR",
     "tr-standard": "標準",
     "tr-usteer": "Usteer",
-    "tr-mlo": "【検証】MLO (Wi-Fi 7専用)",
+    "tr-mlo": "MLO (Wi-Fi 7専用)【検証】",
     "tr-wifi-mld-id": "MLD ID",
     "tr-disabled": "無効",
     "tr-wifi-optimization-disabled": "Wi-Fi無効",
