--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -62,7 +62,7 @@
     "tr-min-snr": "Minimum SNR",
     "tr-standard": "Standard",
     "tr-usteer": "Usteer",
-    "tr-mlo": "MLO (Wi-Fi 7 only)[Experimental] ",
+    "tr-mlo": "MLO: Wi-Fi 7 (BE)[Experimental] ",
     "tr-wifi-mld-id": "MLD ID",
     "tr-disabled": "Disabled",
     "tr-wifi-optimization-disabled": "Wi-Fi Disabled",
