--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -17,7 +17,7 @@
     "tr-import-settings": "インポート",
     "tr-export-settings": "エクスポート",
 
-    "tr-custom-build-label": "カスタムビルド（公式ではありません）",
+    "tr-custom-build-label": "カスタムビルダー（公式ではありません）",
     
     "tr-asu-status-checking": "確認中...",
     "tr-asu-status-online": "オンライン",
