--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -17,7 +17,7 @@
     "tr-import-settings": "Import",
     "tr-export-settings": "Export",
 
-    "tr-custom-build-label": "Custom Build (Unofficial)",
+    "tr-custom-build-label": "Custom Builder (Unofficial)",
     
     "tr-asu-status-checking": "Checking...",
     "tr-asu-status-online": "Online",
