--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -245,7 +245,7 @@
     "tr-tui-customscript-install-openwrt": "OpenWrtパッケージのインストール",
     "tr-tui-customscript-install-official": "公式バイナリのインストール",
     "tr-tui-customscript-adguardhome": "アドガードホーム",
-    "tr-tui-customscript-remove": "アドガードホームを削除",
+    "tr-tui-customscript-remove": "アドガードホームをリムーブ",
     "tr-tui-customscript-change-credentials": "ID及びパスワード変更",
     "tr-tui-customscript-username": "ユーザーID",
     "tr-tui-customscript-password": "パスワード（8文字以上）",
@@ -268,6 +268,10 @@
     "tr-dns-adblock-adblock-fast-info": "軽量: メモリ ~1MB / ストレージ ~1MB",
     "tr-dns-adblock-title": "DNS広告ブロック",
     "tr-dns-adblock-adblock-fast": "アドブロックファースト",
+    "tr-tui-customscript-filebrowser": "ファイルブラウザー",
+    "tr-tui-customscript-filebrowser-install": "ファイルブラウザーをインストール",
+    "tr-tui-customscript-filebrowser-remove": "ファイルブラウザーをリムーブ",
+    "tr-tui-customscript-rootpath": "ルートパス",
     
     "tr-dns-adblock-filter-url": "フィルタURL",
     "tr-dns-adblock-nextdns": "ネクストDNS",
