--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -94,16 +94,16 @@
     "tr-dslite-notice1": "注: 本当の値とは違う場合があります。",
 
     "tr-mape-type": "アドレスタイプ",
-    "tr-br": "ピアアドレス (BR)",
-    "tr-ea-len": "EA長",
-    "tr-ipv4-prefix": "IPv4アドレス",
-    "tr-ipv4-prefix-length": "IPv4プレフィックス長",
-    "tr-ipv4-prefix-range": "IPv4プレフィックスレンジ",
-    "tr-ipv6-prefix": "IPv6プレフィックス",
-    "tr-ipv6-prefix-range": "IPv6プレフィックスレンジ",
-    "tr-psid-offset": "PSIDオフセット",
-    "tr-psid-length": "PSID長",
-    "tr-gua-prefix": "GUAプレフィックス",
+    "tr-gua-prefix": "option ip6prefix (GUA)",
+    "tr-br": "option peeraddr (BR)",
+    "tr-ipv4-prefix": "option ipaddr",
+    "tr-ipv4-prefix-length": "option ip4prefixlen",
+    "tr-ipv4-prefix-range": "option ip4prefixlen",
+    "tr-ipv6-prefix": "option ip6prefix",
+    "tr-ipv6-prefix-range": "option ip6prefixlen",
+    "tr-ea-len": "option ealen",
+    "tr-psid-length": "option psidlen ",
+    "tr-psid-offset": "option offset",
     "tr-mape-notice1": "注: 本当の値とは違う場合があります。",
     "tr-mape-notice2": "注: ポート番号 1〜1023 は特権ポートです。詳細はISPに確認して下さい。",
 
