--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -94,16 +94,16 @@
     "tr-dslite-notice1": "Note: Actual values may differ.",
 
     "tr-mape-type": "Address Type",
-    "tr-br": "Peer Address (BR)",
-    "tr-ea-len": "EA Length",
-    "tr-ipv4-prefix": "IPv4 Address",
-    "tr-ipv4-prefix-length": "IPv4 Prefix Length",
-    "tr-ipv4-prefix-range": "IPv4 Prefix Range",
-    "tr-ipv6-prefix": "IPv6 Prefix",
-    "tr-ipv6-prefix-range": "IPv6 Prefix Range",
-    "tr-psid-offset": "PSID Offset",
-    "tr-psid-length": "PSID Length",
-    "tr-gua-prefix": "GUA Prefix",
+    "tr-gua-prefix": "option ip6prefix (GUA)",
+    "tr-br": "option peeraddr (BR)",
+    "tr-ipv4-prefix": "option ipaddr",
+    "tr-ipv4-prefix-length": "option ip4prefixlen",
+    "tr-ipv4-prefix-range": "option ip4prefixlen",
+    "tr-ipv6-prefix": "option ip6prefix ",
+    "tr-ipv6-prefix-range": "option ip6prefixlen",
+    "tr-ea-len": "option ealen",
+    "tr-psid-length": "option psidlen",
+    "tr-psid-offset": "option offset ",
     "tr-mape-notice1": "Note: Actual values may differ.",
     "tr-mape-notice2": "Note: Ports 1-1023 are privileged ports. Please check with your ISP for details.",
 
