--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -98,9 +98,8 @@
     "tr-br": "option peeraddr (BR)",
     "tr-ipv4-prefix": "option ipaddr",
     "tr-ipv4-prefix-length": "option ip4prefixlen",
-    "tr-ipv4-prefix-range": "option ip4prefixlen",
     "tr-ipv6-prefix": "option ip6prefix",
-    "tr-ipv6-prefix-range": "option ip6prefixlen",
+    "tr-ipv6-prefix-length": "option ip6prefixlen",
     "tr-ea-len": "option ealen",
     "tr-psid-length": "option psidlen ",
     "tr-psid-offset": "option offset",
