--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -93,6 +93,7 @@
     "tr-dslite-aftr-ipv6-address": "AFTR Address",
     "tr-dslite-notice1": "Note: Actual values may differ.",
 
+    "tr-mape-lookup-ipv6": "Enter IPv6 prefix or address",
     "tr-mape-type": "Address Type",
     "tr-gua-prefix": "option ip6prefix (GUA)",
     "tr-br": "option peeraddr (BR)",
